syntax = "proto3";

option csharp_namespace = "MLAgents.CommunicatorObjects";
package communicator_objects;

message HeaderProto {
	int32 status = 1;
	string message = 2;
}
